Primera subida con cluster

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -7,3 +7,12 @@ body {
 .logo {
   width: 30%;
 }
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: bg-dark;
+  color: white;
+  text-align: center;
+}
