--- a/src/views/quizs/all-quizes.hbs
+++ b/src/views/quizs/all-quizes.hbs
@@ -7,8 +7,9 @@
           {{ title }} <a href="/notes/edit/{{_id}}"><i class="fas fa-edit"></i></a>
         </h4>
         <p>{{ description }}</p>
+         
         <!-- DELETE REQUEST -->
-        <form action="/notes/delete/{{_id}}?_method=DELETE" method="POST">
+        <form action="/quizs/delete/{{_id}}?_method=DELETE" method="POST">
           <input type="hidden" name="_method" value="DELETE">
           <button type="submit" class="btn btn-danger btn-block btn-sm">Delete</button>
         </form>
@@ -19,8 +20,8 @@
   <div class="card mx-auto">
     <div class="card-body">
       <h1>Hello {{user.name}}</h1>
-      <p clsss="lead">There are not Notes yet.</p>
-      <a href="/notes/add" class="btn btn-success btn-block">Create One!</a>
+      <p clsss="lead">No hay Quizes Todavia.</p>
+      <a href="/quizs/add" class="btn btn-success btn-block">Añadir uno!</a>
     </div>
   </div>
   {{/each}}
