--- a/src/views/quizs/edit-quiz.hbs
+++ b/src/views/quizs/edit-quiz.hbs
@@ -13,7 +13,7 @@
       <h3>Edit Note</h3>
     </div>
     <div class="card-body">
-      <form action="/notes/edit-note/{{note._id}}?_method=PUT" method="POST">
+      <form action="/quizs/edit-quiz/{{note._id}}?_method=PUT" method="POST">
         <input type="hidden" name="_method" value="PUT">
         <div class="form-group">
           <input type="text" name="title" class="form-control" value="{{note.title}}"/>
