--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>QuizVoid</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <!-- BOOTSTRAP - BOOTSWATCH THEME - COSMOS -->
     <link rel="stylesheet" href="https://bootswatch.com/4/cosmo/bootstrap.min.css">
     <!-- FONT AWESOME -->
